feat: add code foldding

--- a/options.html
+++ b/options.html
@@ -43,19 +43,22 @@
     .CodeMirror {
       width: 80%;
       height: 100%;
+      min-height: 40vh;
       margin: 0 auto;
       font-family: monaco, 'Source Code Pro', Consolas, Menlo, Courier, monospace;
       font-size: 12px;
       line-height: 1.5em;
       border: 1px solid lightgray;
     }
+
+    .CodeMirror-scroll {
+      min-height: 40vh;
+    }
   </style>
 </head>
 
 <body>
-  <textarea name="rules" id="rules" cols="30" rows="10" style="display: none">
-
-  </textarea>
+  <textarea name="rules" id="rules" cols="30" rows="10" style="display: none"></textarea>
 
   <div class="save-btn-wrapper">
     <button type="button" class="btn btn-primary mr-4" id="save-btn">Save Rules</button>
@@ -107,9 +110,9 @@
   <!-- CodeMirror -->
   <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.2/lib/codemirror.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.2/mode/javascript/javascript.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.2/addon/fold/foldcode.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.2/addon/fold/brace-fold.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.2/addon/fold/foldgutter.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.2/addon/fold/foldcode.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.2/addon/fold/brace-fold.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.2/addon/fold/foldgutter.min.js"></script>
 
   <script src="./options.js"></script>
 </body>
